--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
+    "formik": "^2.4.6",
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.5",
-    "next": "15.1.4",
+    "next": "^15.1.6",
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,7 +31,9 @@
     "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
